[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/gear-button.png" type="Texture" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/artwork-button.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/NotoSansUI_Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/collection-button.png" type="Texture" id=5]
[ext_resource path="res://assets/tracks-button.png" type="Texture" id=6]
[ext_resource path="res://assets/production-button.png" type="Texture" id=7]
[ext_resource path="res://assets/heading2.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/player-button.png" type="Texture" id=9]
[ext_resource path="res://assets/heading1.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/Fader.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/UI.theme" type="Theme" id=12]
[ext_resource path="res://scenes/Info.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
script = ExtResource( 2 )

[node name="C" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VB" type="VBoxContainer" parent="C"]
margin_left = 426.0
margin_top = 23.0
margin_right = 854.0
margin_bottom = 776.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="C/VB"]
margin_right = 428.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "VINYL"
align = 1

[node name="Label2" type="Label" parent="C/VB"]
margin_top = 119.0
margin_right = 428.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 10 )
text = "The analog music playing simulator"

[node name="Tracks" type="Button" parent="C/VB"]
margin_top = 173.0
margin_right = 428.0
margin_bottom = 253.0
custom_fonts/font = ExtResource( 8 )
text = "Music Tracks"
icon = ExtResource( 6 )

[node name="Producer" type="Button" parent="C/VB"]
margin_top = 273.0
margin_right = 428.0
margin_bottom = 353.0
custom_fonts/font = ExtResource( 8 )
text = "Record Producer"
icon = ExtResource( 7 )

[node name="Artwork" type="Button" parent="C/VB"]
margin_top = 373.0
margin_right = 428.0
margin_bottom = 453.0
custom_fonts/font = ExtResource( 8 )
text = "Cover and Label Artwork"
icon = ExtResource( 3 )

[node name="Collection" type="Button" parent="C/VB"]
margin_top = 473.0
margin_right = 428.0
margin_bottom = 553.0
custom_fonts/font = ExtResource( 8 )
text = "Music Collection"
icon = ExtResource( 5 )

[node name="Player" type="Button" parent="C/VB"]
margin_top = 573.0
margin_right = 428.0
margin_bottom = 653.0
custom_fonts/font = ExtResource( 8 )
text = "Record Player"
icon = ExtResource( 9 )

[node name="Gear" type="Button" parent="C/VB"]
margin_top = 673.0
margin_right = 428.0
margin_bottom = 753.0
custom_fonts/font = ExtResource( 8 )
text = "Gear"
icon = ExtResource( 1 )

[node name="c2" type="CanvasLayer" parent="."]

[node name="M" type="MarginContainer" parent="c2"]
anchor_right = 1.0
margin_bottom = 59.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20

[node name="TopBar" type="HBoxContainer" parent="c2/M"]
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 59.0
theme = ExtResource( 12 )
custom_constants/separation = 10

[node name="Sp" type="Control" parent="c2/M/TopBar"]
margin_right = 1188.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="About" type="Button" parent="c2/M/TopBar"]
margin_left = 1198.0
margin_right = 1260.0
margin_bottom = 39.0
text = "About"

[node name="Info" parent="c2" instance=ExtResource( 13 )]

[node name="c" type="CanvasLayer" parent="."]

[node name="Fader" parent="c" instance=ExtResource( 11 )]
visible = false
mouse_filter = 2
fade_in_enabled = false

[connection signal="pressed" from="C/VB/Tracks" to="." method="_on_Tracks_pressed"]
[connection signal="pressed" from="C/VB/Producer" to="." method="_on_Producer_pressed"]
[connection signal="pressed" from="C/VB/Artwork" to="." method="_on_Artwork_pressed"]
[connection signal="pressed" from="C/VB/Collection" to="." method="_on_Collection_pressed"]
[connection signal="pressed" from="C/VB/Player" to="." method="_on_Player_pressed"]
[connection signal="pressed" from="C/VB/Gear" to="." method="_on_Gear_pressed"]
[connection signal="pressed" from="c2/M/TopBar/About" to="." method="_on_About_pressed"]
